--- a/music-server/client-side/client-side.css
+++ b/music-server/client-side/client-side.css
@@ -3,7 +3,7 @@
 }
 body {
 
-    background-image: URL('https://cdn.pixabay.com/photo/2013/11/03/08/05/cheers-204742_1280.jpg');
+    background-image: URL('https://cdn.pixabay.com/photo/2015/12/24/02/14/music-1106439_1280.jpg');
     background-size: cover;
     
     }
@@ -12,17 +12,27 @@ body {
     color: aliceblue;
     }
     
-    #main-div {
-    padding: 0px;
-    margin-right: -10px 0px 0px 0px;
+#main {
+    padding-top: 10px;
+    margin: -10px -10px 0px -10px;
     text-align: right;
     justify-content: space-between;
     display: flex;
-    border: solid rgb(33, 42, 42);
-    background-color: rgb(40, 37, 37);
+    border: solid rgb(221, 212, 212);
+    background-color: rgb(221, 212, 212);
+    color:palevioletred;
     /* border-left: -10px;
     border-right: -10px */
     }
+    #user,#pass{
+        color:black;
+    }
+    #loginBtn,#logout{
+     background-color: rgb(232, 240, 240);
+     border-radius: 4px;
+    }
+
+    
   #img {
     width: 50px;
     height: 50px;
@@ -40,3 +50,23 @@ body {
     #playlist{
         border:2px solid red;
     }
+
+    #myTable {
+        font-family: arial, sans-serif;
+        border-collapse: collapse important!;
+        gap: 0px;
+        width: 100%;
+      }
+      
+      td, th {
+        border: 1px solid hwb(193 10% 21%);
+        text-align: left;
+        padding: -8px;
+        background:#c6b5b5;
+        color: black;
+      }
+      
+      tr:nth-child(even) {
+        background-color: #ab1919;
+       
+      }
