--- a/music-server/client-side/client-side.css
+++ b/music-server/client-side/client-side.css
@@ -1,72 +1,92 @@
 #errorMsg {
-    color: red;
+  color: red;
 }
+
 body {
 
-    background-image: URL('https://cdn.pixabay.com/photo/2015/12/24/02/14/music-1106439_1280.jpg');
-    background-size: cover;
-    
-    }
+  background-image: URL('https://cdn.pixabay.com/photo/2015/12/24/02/14/music-1106439_1280.jpg');
+  background-size: cover;
 
-    #pass,#user {
-    color: aliceblue;
-    }
-    
+}
+
+#pass,
+#user {
+  color: aliceblue;
+}
+
 #main {
-    padding-top: 10px;
-    margin: -10px -10px 0px -10px;
-    text-align: right;
-    justify-content: space-between;
-    display: flex;
-    border: solid rgb(221, 212, 212);
-    background-color: rgb(221, 212, 212);
-    color:palevioletred;
-    /* border-left: -10px;
-    border-right: -10px */
-    }
-    #user,#pass{
-        color:black;
-    }
-    #loginBtn,#logout{
-     background-color: rgb(232, 240, 240);
-     border-radius: 4px;
-    }
+  padding-top: 10px;
+  margin: -10px -10px 0px -10px;
+  text-align: right;
+  justify-content: space-between;
+  display: flex;
+  border: solid rgb(221, 212, 212);
+  background-color: rgb(221, 212, 212);
+  color: palevioletred;
+  /* border-left: -10px;
+  border-right: -10px */
+}
 
-    
-  #img {
-    width: 50px;
-    height: 50px;
-    
-    }
-    #input {
-    padding-top: 10px;
-    
-    } 
-   #h1 {
-    color: rgb(125, 62, 95);
-    font-weight: bold;
-    
-    }
-    #playlist{
-        border:2px solid red;
-    }
+#user,
+#pass {
+  color: black;
+}
 
-    #myTable {
-        font-family: arial, sans-serif;
-        border-collapse: collapse important!;
-        gap: 0px;
-        width: 100%;
-      }
-      
-      td, th {
-        border: 1px solid hwb(193 10% 21%);
-        text-align: left;
-        padding: -8px;
-        background:#c6b5b5;
-        color: black;
-      }
-      
-      tr:nth-child(even) {
-        background-color: #ab1919;
-       
-      }
+#loginBtn,
+#logout {
+  background-color: rgb(232, 240, 240);
+  border-radius: 4px;
+}
+
+
+#img {
+  width: 50px;
+  height: 50px;
+
+}
+
+#input {
+  padding-top: 10px;
+
+}
+
+#h1 {
+  color: rgb(125, 62, 95);
+  font-weight: bold;
+
+}
+
+#playlist {
+  border: 2px solid red;
+}
+
+#myTable,
+#myFavoriteTable {
+  font-family: arial, sans-serif;
+  border-collapse: collapse important !;
+  gap: 0px;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid hwb(193 10% 21%);
+  text-align: left;
+  padding: -8px;
+  background: #c6b5b5;
+  color: black;
+}
+
+tr:nth-child(even) {
+  background-color: #ab1919;
+
+}
+
+#musicPlayer {
+
+  display: flex;
+  background-color: #eaeaea;
+  padding: 10px;
+  margin-bottom: 10px;
+  justify-content: space-between;
+}
