--- a/music-server/client-side/client-side.css
+++ b/music-server/client-side/client-side.css
@@ -23,8 +23,7 @@ body {
   border: solid rgb(221, 212, 212);
   background-color: rgb(221, 212, 212);
   color: palevioletred;
-  /* border-left: -10px;
-  border-right: -10px */
+
 }
 
 #user,
@@ -36,6 +35,7 @@ body {
 #logout {
   background-color: rgb(232, 240, 240);
   border-radius: 4px;
+  
 }
 
 
@@ -115,4 +115,9 @@ tr:nth-child(even) {
   100% {
     transform: translateX(1500%);
   }
+}
+
+
+audio{
+  color:green;
 }
